sudoku-rs/src/solver/strategic/strategies/impls/snapshots/sudoku__solver__strategic__strategies__impls__x_wing__tests__snapshots__x_wing_sudokuwiki_2.snap
---
source: sudoku-rs/src/solver/strategic/strategies/impls/x_wing.rs
expression: "TransportDeductions::from(deductions)"
---
deductions:
  - reasons:
      - position:
          row: 4
          column: 1
        candidates:
          - 3
      - position:
          row: 4
          column: 7
        candidates:
          - 3
      - position:
          row: 8
          column: 1
        candidates:
          - 3
      - position:
          row: 8
          column: 7
        candidates:
          - 3
    actions:
      - position:
          row: 4
          column: 0
        deleteCandidates:
          - 3
      - position:
          row: 4
          column: 2
        deleteCandidates:
          - 3
      - position:
          row: 4
          column: 6
        deleteCandidates:
          - 3
      - position:
          row: 4
          column: 8
        deleteCandidates:
          - 3
      - position:
          row: 8
          column: 2
        deleteCandidates:
          - 3
      - position:
          row: 8
          column: 3
        deleteCandidates:
          - 3
      - position:
          row: 8
          column: 5
        deleteCandidates:
          - 3
      - position:
          row: 8
          column: 8
        deleteCandidates:
          - 3
